WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55448
Past-the-end writes in VM exceptions (caused crashes in
r79627
)
https://bugs.webkit.org/show_bug.cgi?id=55448
Summary
Past-the-end writes in VM exceptions (caused crashes in r79627)
Geoffrey Garen
Reported
2011-02-28 22:57:20 PST
Past-the-end writes in VM exceptions (caused crashes in
r79627
)
Attachments
Patch
(3.01 KB, patch)
2011-02-28 22:59 PST
,
Geoffrey Garen
barraclough
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2011-02-28 22:59:33 PST
Created
attachment 84191
[details]
Patch
Geoffrey Garen
Comment 2
2011-03-01 09:41:24 PST
Committed
r80006
: <
http://trac.webkit.org/changeset/80006
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug